--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -37,7 +37,8 @@
 
 .addToCartBttn {
   background-color: transparent;
-  border: 2px solid rgb(19, 19, 19);
+  border: 2px solid rgb(255, 255, 255);
+  color: azure;
   min-width: 100px;
   padding-left: 10px;
   padding-right: 10px;
@@ -47,7 +48,7 @@
 }
 
 .addToCartBttn:hover {
-  background-color: rgb(19, 19, 19);
+  background-color: rgb(117, 115, 115);
   color: white;
   cursor: pointer;
 }
