--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,9 +1,10 @@
 .main-footer {
-    color: white;
-    background-color: #080808;
-    padding-top: 1em;
-    position: relative;
-    bottom: 0;
-    width: 100%;
+  background-color: #000000; 
+  color: #fdfdfd;
+  padding: 20px; 
+  text-align: center;
+  font-family: 'Pacifico', cursive; 
+  font-size: 14px; 
+  
   }
   
