--- a/src/pages/about_us.css
+++ b/src/pages/about_us.css
@@ -1,8 +1,7 @@
 :root {
 	--clr-primary: teal;
 	--clr-secondary: crimson;
-	--bg-primary: #0d1a2d;
-	--bg-secondary: #14273e;
+   /* background-image: url(https://e1.pxfuel.com/desktop-wallpaper/461/981/desktop-wallpaper-pubg-mobile-1920x1080-pubg-mobile.jpg);  */
 	--text-primary: #fff;
 	--text-secondary: #ccc;
   /* }
