--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -5,3 +5,24 @@
     color: var(--text-primary);
     margin-bottom: 0.5em;
 }
+
+#background-video {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+  @media (max-width: 750px) {
+    #background-video {
+      display: none;
+    }
+    body {
+      background: url("../assets/videoBg.mp4") no-repeat;
+      background-size: cover;
+    }
+}
