changed background and text color

--- a/src/pages/Pubg_clanView.css
+++ b/src/pages/Pubg_clanView.css
@@ -1,5 +1,5 @@
 body{
-     background-image: url(https://e1.pxfuel.com/desktop-wallpaper/461/981/desktop-wallpaper-pubg-mobile-1920x1080-pubg-mobile.jpg); 
+     background-image: url(https://w0.peakpx.com/wallpaper/171/609/HD-wallpaper-pubg-royale-pass-season-14.jpg); 
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
