--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -5,17 +5,18 @@
   align-items: center;
 }
 .cartItem {
-  width: 700px;
-  height: 250px;
+  width: 310px;
+  height: 400x;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   border-radius: 25px;
   margin: 30px;
 }
 
 .cartItem img {
-  width: 200px;
+  width: 300px;
   border: 2px solid #000; /* Add a border around the image */
   border-radius: 10px; /* Adjust the border radius as desired */
 }
@@ -23,6 +24,7 @@
 .cartItem .description {
   width: 100%;
   font-size: 30px;
+  margin-left: 20px;
 }
 
 .countHandler input {
