--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -32,7 +32,10 @@
   text-align: center;
   font-weight: bolder;
 }
-
+.custom-button{
+  color: aliceblue;
+  border-color: aliceblue;
+}
 .checkout button {
   width: 150px;
   height: 50px;
