--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,4 +1,4 @@
-* {
+.main * {
   margin: 0;
   padding: 0;
 }
@@ -6,6 +6,7 @@
 .main {
   width: 100%;
   height: 100vh;
+  font-family: 'Pacifico', cursive; 
 }
 
 video {
@@ -14,3 +15,15 @@ video {
   object-fit: cover;
 }
 
+.content {
+
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+      
