--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -4,12 +4,10 @@
   justify-content: center;
   align-items: center;
 }
-
 .cartItem {
   width: 700px;
   height: 250px;
   display: flex;
-
   align-items: center;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   border-radius: 25px;
@@ -18,6 +16,8 @@
 
 .cartItem img {
   width: 200px;
+  border: 2px solid #000; /* Add a border around the image */
+  border-radius: 10px; /* Adjust the border radius as desired */
 }
 
 .cartItem .description {
