--- a/src/components/home.css
+++ b/src/components/home.css
@@ -6,7 +6,8 @@
 .main {
   width: 100%;
   height: 100vh;
-  font-family: 'Pacifico', cursive; 
+  font-family: 'Pacifico', cursive;
+  position: relative; /* Add this to establish a new stacking context */
 }
 
 video {
@@ -16,7 +17,7 @@ video {
 }
 
 .content {
-
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
@@ -26,4 +27,24 @@ video {
   align-items: center;
   color: white;
 }
-      
+
+.navbar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.navbar li {
+  display: inline;
+  margin: 0 20px; /* Adjust the spacing between menu items */
+}
+
+.navbar a {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  transition: color 0.3s ease-in-out;
+}
+
+.navbar a:hover {
+  color: #55acee; /* Change the color on hover */
+}
